infrastructure/lastgasp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lastgasp
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
